5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1601_820.log
== TEST (2019-03-22 11:57:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 11:59:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:02:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.143219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/820/main.py", line 8, in <module>
    notas_RS50=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:02:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_RS50=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:03:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10//2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.116733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/820/main.py", line 8, in <module>
    notas_RS50=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:05:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10=resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10=resto_RS50%10

# Quantidade de notas de R$ 2
notas_RS2=resto_RS10//2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_RS50=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 12:06:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?"))

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10=resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10=resto_RS50%10

# Quantidade de notas de R$ 2
notas_RS2=resto_RS10//2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 12:06:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?"))

# Quantidade de notas de R$ 50
notas_RS50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50=valor%50

# Quantidade de notas de R$ 10
notas_RS10=resto_RS50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10=resto_RS50%10

# Quantidade de notas de R$ 2
notas_RS2=resto_RS10//2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.135057
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
